Skip the XEvent parameter while introspecting

https://bugs.freedesktop.org/show_bug.cgi?id=47141